--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,18 @@
 
     <groupId>me.kelsi</groupId>
     <artifactId>MineSimulator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+            <version>5.0.0-beta.18</version>
+        </dependency>
+    </dependencies>
 
 </project>
